--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,259 @@
+*, *:after, *:before {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: #fafafa;
+  color: rgb(36, 39, 41);
+  font-family: 'Avenir';
 }
-iframe
-{
-    display: none;
+
+iframe {
+  display: none;
+}
+
+.wrapper {
+  max-width: 500px;
+  margin: 27px auto;
+}
+
+ input, textarea, select {
+  border-radius: 7px;
+  font-size: 17px;
+  font-weight: 400;
+  padding: 9px 12px;
+  background: white;
+  border: 1px solid rgb(187, 192, 196);
+  transition: border .2s ease;
+ } 
+   
+input[type="checkbox"], input[type="radio"] {
+  width: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  display: none;
+}
+
+label {
+  cursor: pointer;
+}
+
+.form-field {
+  position: relative;
+}
+
+.form-item {
+  padding: 17px 0;
+}
+
+.item-label {
+  display: flex;
+  gap: 7px;
+}
+
+.form-item input {
+  font-size: inherit;
+  font-weight: inherit;
+  margin-bottom: 7px;
+}
+
+.form-item label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.form-item label:focus {
+  outline: 1px solid red;
+  border: 1px solid red;
+}
+
+/* move label underneath input */
+.form-field-text .field-label,
+.form-field-textarea .field-label {
+  order: 2;
+}
+.form-field-text .item-label {
+  gap: 0;
+}
+
+/* the text label for each form item */
+span.field-label {
+}
+
+/* the label for a group of options */
+/* move label to right of input */
+.form-item label.form-field-group {
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  gap: 17px;
+}
+
+.form-field-radio .group-option-label {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+
+.group-option-label {
+  font-size: 17px;
+}
+
+.field-error-message {
+  position: absolute;
+  bottom: 2px;
+  right: 0;
+  color: red;
+}
+
+.show-password-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 51px;
+  bottom: 0;
+  right: 5px;
+  height: 29px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.form-field-checkbox label {
+  display: flex;
+  justify-content: left;
+  flex-direction: row;
+}
+
+.form-field-checkbox .form-item label {
+  display: flex;
+  align-items: center;
+}
+
+/* input by name */
+/* TODO toLower */
+select[name=favoriteColor] {
+  width: 100px;
+}
+
+.radio-group {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.form-field.form-field-checkboxes {
+  border: 1px solid gray;
+  border-radius: 7px;
+  padding: 0 17px;
+}
+
+.radio-group label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 7px;
+}
+
+.radio-group label span {
+  text-align: center;
+}
+
+.replaced-input-checkbox, 
+.replaced-input-checkboxes, 
+.replaced-input-radio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 27px;
+  width: 27px;
+  border: 2px solid black;
+  border-radius: 3px;
+  background: white;
+  cursor: pointer;
+  transition: border .2s ease;
+}
+
+.replaced-input-radio {
+  border-radius: 50%;
+  height: 23px;
+  width: 23px;
+}
+
+.replaced-input-checkbox.checked, 
+.replaced-input-checkboxes.checked, 
+.replaced-input-radio.checked {
+  position: relative;
+  border: 2px solid green;
+}
+
+.replaced-input-checkbox.checked:focus, 
+.replaced-input-checkboxes.checked:focus, 
+.replaced-input-radio.checked:focus {
+  border: 2pb solid blue;
+}
+
+.replaced-input-radio.checked:before {
+  position: absolute;
+  content: '';
+  top: 7px;
+  left: 7px;
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  background-color: green;
+}
+
+.replaced-input-checkbox > span, 
+.replaced-input-checkboxes > span, 
+.replaced-input-radio > span {
+  position: relative;
+  top: 2px;
+  left: 1px;
+  opacity: 0;
+  transition: .2s opacity ease;
+}
+
+.replaced-input-checkbox.checked > span,
+.replaced-input-checkboxes.checked > span {
+  opacity: 1;
+}
+
+.replaced-input-radio .group-option-label {
+  text-transform: uppercase;
+}
+
+input:focus,
+textarea:focus, 
+select:focus,
+button[type="submit"]:focus,
+.replaced-input-checkbox:focus, 
+.replaced-input-checkboxes:focus, 
+.replaced-input-radio:focus {
+  outline: 2px solid blue;
+  border: 2pb solid blue;
+}
+
+button[type="submit"] {
+  display: inline-flex;
+  align-items: center;
+  color: white;
+  background-color: #1877F1;
+  border: 2px solid #1877F1;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 6px 16px;
+  margin-top: 17px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 0 0 1px #1877F1;
+  box-shadow: inset 0 0 0 1px #1877F1;
 }
